welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:22: error: Int does not take parameters
    while (y<=getMondeHauteur()-diag()-1){
                                    ^Diagonal:29: error: Int does not take parameters
    x=getMondeHauteur-diag()-1
                          ^